--- a/index.html
+++ b/index.html
@@ -3,36 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Audio Editor</title>
+    <title>Web Audio Editor</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="menu-bar">
-        <button onclick="newProject()">New Project</button>
-        <button onclick="saveProject()">Save</button>
-        <button onclick="loadProject()">Load</button>
-        <button onclick="exportProject()">Export</button>
-        <button onclick="settings()">Settings</button>
+    <div class="container">
+        <header>
+            <h1>Web Audio Editor</h1>
+        </header>
+        <div class="sidebar">
+            <ul>
+                <li>New Project</li>
+                <li>Open Project</li>
+                <li>Save Project</li>
+                <li>Export</li>
+                <li>Import Audio</li>
+                <!-- Add more features here -->
+            </ul>
+        </div>
+        <div class="main">
+            <div class="toolbar">
+                <button id="play">Play</button>
+                <button id="pause">Pause</button>
+                <button id="stop">Stop</button>
+                <!-- Other control buttons -->
+            </div>
+            <div class="track-container">
+                <canvas id="waveform"></canvas>
+            </div>
+            <div class="controls">
+                <label>Volume:</label>
+                <input type="range" id="volume" min="0" max="1" step="0.01" value="0.5">
+                <label>Pitch:</label>
+                <input type="range" id="pitch" min="0.5" max="2" step="0.01" value="1">
+                <label>Echo:</label>
+                <input type="checkbox" id="echo">
+                <button id="crop">Crop</button>
+                <button id="record">Record Voice Over</button>
+                <!-- Add more controls as needed -->
+            </div>
+        </div>
     </div>
-
-    <div class="controls">
-        <input type="file" id="audioUpload" accept="audio/*">
-        <button onclick="playPause()">Play/Pause</button>
-        <button onclick="stop()">Stop</button>
-        <button onclick="cutAudio()">Cut</button>
-        <button onclick="copyAudio()">Copy</button>
-        <button onclick="pasteAudio()">Paste</button>
-    </div>
-
-    <div id="waveform"></div>
-
-    <div class="track-controls">
-        <button onclick="muteTrack()">Mute</button>
-        <label for="volumeControl">Volume</label>
-        <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="1">
-    </div>
-
-    <script src="https://unpkg.com/wavesurfer.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
